cmake_minimum_required(VERSION 3.15)
project(test)
# set(src add.cpp div.cpp main.cpp mult.cpp sub.cpp)
# aux_source_directory($(PROJECT_SOURCE_DIR) src)
file(GLOB src ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(EXECUTABLE_OUTPUT_PATH /home/yds/OS_Programming/cmake_test/build)
include_directories($(PROJECT_SOURCE_DIR)/include)
# set(CMake_CXX_STANDARD 11)
add_executable(app ${src})
